--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: 「SUGAR」
 SEOTitle:  HappyBirthday~
-header-img: img/post-bg-desk.jpg
+header-img: img/xuesong/true.jfif
 email: icxuesong@163.com
 description: "糖糖小朋友生日快乐~"
 keyword: "test"
