--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ github_repo: "https://github.com/forsnow/forsnow.github.io" # you code repositor
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "HappyBirthday~"
-sidebar-avatar: /img/xuesong/zlw.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/xuesong/home.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
