--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: 「SUGAR」
 SEOTitle:  HappyBirthday~
-header-img: img/xuesong/true.jfif
+header-img: img/xuesong/home.jpg
 email: icxuesong@163.com
 description: "糖糖小朋友生日快乐~"
 keyword: "test"
@@ -12,7 +12,7 @@ github_repo: "https://github.com/forsnow/forsnow.github.io" # you code repositor
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "HappyBirthday~"
-sidebar-avatar: /img/xuesong/home.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/xuesong/zlw.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
