--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -1,13 +1,13 @@
 {
-  "name": "BY Blog",
-  "short_name": "BY Blog",
-  "description": "A personal blog by engineer",
+  "name": "Zhanglw",
+  "short_name": "Zhanglw",
+  "description": "一个宝藏女孩",
   "icons": [{
-    "src": "icons/pwa_icon_128.png",
+    "src": "icons/zlw.jpg",
     "sizes": "128x128",
     "type": "image/png"
   }, {
-    "src": "icons/pwa_icon_512.png",
+    "src": "icons/zlw.jpg",
     "sizes": "512x512",
     "type": "image/png"
   }],
